# nowplayin

./: .env.example  .gitignore  LICENSE  PRIVACY.md  README.md  launcher.py  nowplayin.py  pyproject.toml  run.sh  slack-app-manifest.yml
NowPlayin.app/Contents/: Info.plist
NowPlayin.app/Contents/MacOS/: NowPlayin
NowPlayin/NowPlayin/: Info.plist  NowPlayin.entitlements  NowPlayinApp.swift
NowPlayin/NowPlayin.xcodeproj/: project.pbxproj
NowPlayin/NowPlayin/Models/: Track.swift  Workspace.swift
NowPlayin/NowPlayin/Services/: KeychainService.swift  MusicService.swift  SlackService.swift
NowPlayin/NowPlayin/ViewModels/: NowPlayinViewModel.swift
NowPlayin/NowPlayin/Views/: MenuBarView.swift  OnboardingView.swift  PreferencesView.swift
NowPlayin/scripts/: build-release.sh
