[project]
name = "nowplayin"
version = "0.1.0"
description = "Sync your Slack status with the currently playing track in Music.app"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["requests"]

[project.scripts]
nowplayin = "nowplayin:main"

[tool.setuptools]
py-modules = ["nowplayin"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
